링크 기능 추가

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <h1>WEB</h1>
-WWW is <strong>World <u>Wide</u> WEB</strong>. <br>
+<a href="http://info.cern.ch/">WWW</a> is <strong>World <u>Wide</u> WEB</strong>. <br>
 <img src="https://images.unsplash.com/photo-1534210199251-0ef13538e0a4?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=3540&q=80" width="300" alt="이미지 설명">
 <h2>html</h2>
 html is ...
