--- a/index.html
+++ b/index.html
@@ -1,17 +1,15 @@
-<!doctype html>
 <html>
-<head>
-  <title>WEB</title>
-  <meta charset="utf-8">
-</head>
-<html>
-<body>
-  <h1>WEB</h1>
-  <a href="http://info.cern.ch/">WWW</a> is <strong>World <u>Wide</u> WEB</strong>. <br>
-  <img src="https://images.unsplash.com/photo-1534210199251-0ef13538e0a4?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=3540&q=80" width="300" alt="이미지 설명">
-  <h2>html</h2>
-  html is ...
-  <h2>css</h2>
-  css is ...
-</body>
+  <head>
+    <title>WEB!</title>
+  </head>
+  <body>
+    <h1>WEB</h1>
+    <ol>
+      <ol>
+        <li><a href="https://developer.mozilla.org/en-US/docs/Web/CSS">css</a></li>
+        <li><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript">javascript</a></li> 
+      </ol>      
+    </ol>
+    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque, molestiae?
+  </body>
 </html>
