--- a/css/1.html
+++ b/css/1.html
@@ -3,17 +3,20 @@
     <style>
       li { 
        color:blue;
+       font-size:10px;
       } 
     </style>
+
     <ul>
-      <li>html</li>
+      <li style="font-size:100px;">html</li>
       <li>css</li>
+      <li>js</li>
     </ul>
     
-    <ul>
+    <!-- <ul>
       <li><font color="red">html</font></li>
       <li><font color="red">css</font></li>
-    </ul>
+    </ul> -->
     
   </body>
 </html>
