class는 .으로 표현하고, 그룹핑 할 때 쓴다. id는 #으로 표현하고 식별할 때 쓴다.

--- a/css/1.html
+++ b/css/1.html
@@ -5,12 +5,19 @@
        color:blue;
        font-size:10px;
       } 
+      .em{
+        text-decoration:underline;
+      }
+      #selected{
+        background-color:red;
+      }
     </style>
 
+    <h1 class="em">WEB</h1>
     <ul>
       <li style="font-size:100px;">html</li>
-      <li>css</li>
-      <li>js</li>
+      <li class="em" id="selected">css</li>
+      <li class="em">js</li>
     </ul>
     
     <!-- <ul>
