배운 것 사용하기

--- a/index.html
+++ b/index.html
@@ -1,14 +1,22 @@
 <html>
   <head>
     <title>WEB!</title>
+    <style>
+      h1 {
+        border-bottom: 20px solid green;
+        padding:10px;
+        text-align: center;
+      }
+      body {
+        background-color:pink;
+      }
+    </style>
   </head>
   <body>
     <h1>WEB</h1>
     <ol>
-      <ol>
         <li><a href="https://developer.mozilla.org/en-US/docs/Web/CSS">css</a></li>
         <li><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript">javascript</a></li> 
-      </ol>      
     </ol>
     Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque, molestiae?
   </body>
