--- a/javascript/1.html
+++ b/javascript/1.html
@@ -8,5 +8,24 @@
     <h1>이벤트 프로그래밍</h1>
     <input type="button" value="hi" onclick="alert('안녕')">
     <input type="text" onChange="alert('값이 변경 되었습니다!')">
+    <h1>데이터 타입</h1>
+    <h2>숫자</h2>
+    <script>
+      document.write(1); // 정수
+      document.write('<br>');
+      document.write(1.1); // 실수
+      document.write('<br>');
+      document.write(1+1); // 2
+      document.write('<br>');
+      document.write(2-1);
+      document.write('<br>');
+      document.write(2*2);
+      document.write('<br>');
+      document.write(10/2);
+      document.write('<br>');
+      document.write(Math.random())
+      document.write('<br>');
+      document.write(Math.round(0.6));
+    </script>
   </body>
 </html>
