문장열과 그 연산방법

--- a/javascript/1.html
+++ b/javascript/1.html
@@ -26,6 +26,23 @@
       document.write(Math.random())
       document.write('<br>');
       document.write(Math.round(0.6));
+
+      function w(입력값){
+        document.write(입력값+'<br>');
+      }
+
+
+    </script>
+    <h1>문자열 - String</h1>
+    <script>
+      w('Hello world');
+      w("Hello world");
+      w(`Hello
+      world`)
+      w('Hello world'.length)
+      w('Hello world'.indexOf('world'))
+
+      w('1'+'1');
     </script>
   </body>
 </html>
