변수는 데이터에 이름을 붙인 것

--- a/javascript/1.html
+++ b/javascript/1.html
@@ -44,5 +44,12 @@
 
       w('1'+'1');
     </script>
+    <h1>변수</h1>
+    <script>
+      let 가격 = 10000;
+      let 부가가치세율 = 0.1;
+      let 부가가치세 = 가격 * 부가가치세율;
+      w(부가가치세); 
+    </script>
   </body>
 </html>
